--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.Login {
+.login {
   display: flex;
   width: 100%;
   height: 100vh;
@@ -17,7 +17,7 @@
   background-color: #FFFFFF;
 }
 
-.Splash{
+.loginSplash{
   display : flex;
   flex-direction : column;
   justify-content : center;
@@ -27,7 +27,7 @@
   align-self : stretch;
 }
 
-.Logo{
+.logo{
   width: 118px;
   height: 142.997px;
 }
@@ -37,7 +37,7 @@
   height: 32px;
 }
 
-.container {
+.loginContainer {
   display : flex;
   padding : 0px 24px;
   flex-direction : column;
@@ -46,7 +46,7 @@
   align-self : stretch;
 }
 
-.Input{
+.input{
   display : flex;
   flex-direction : column;
   justify-content: flex-end;
@@ -76,7 +76,7 @@ input::-webkit-input-placeholder {
   line-height : 22px;
 }
 
-.Button_fill{
+.buttonFill{
   display : flex;
   height : 56px;
   justify-content: center;
@@ -85,56 +85,56 @@ input::-webkit-input-placeholder {
   border-radius: 6px;
   background : #2d71f7;
   border : none;
+
+  span{
+    color : #fff;
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Apple SD Gothic Neo;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+  }
 }
 
-.Button_fill span{
-  color : #fff;
-  text-align: center;
-  font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Apple SD Gothic Neo;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
-}
-
-.login_option{
+.loginOption{
   display : flex;
   width : 240px;
   justify-content: center;
   align-items: center;
   gap : 24px;
-}
 
-.login_option a{
-  width : 95px;
-  flex-shrink: 0;
-  color : #000;
-  text-align: center;
-  font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Apple SD Gothic Neo;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  text-decoration-line: none;
-}
+  a{
+    width : 95px;
+    flex-shrink: 0;
+    color : #000;
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Apple SD Gothic Neo;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: none;
+  }
 
-.login_option span{
-  width : 95px;
-  flex-shrink: 0;
-  color : #000;
-  text-align: center;
-  font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Apple SD Gothic Neo;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
+  span{
+    width : 95px;
+    flex-shrink: 0;
+    color : #000;
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Apple SD Gothic Neo;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
 
-.login_option div{
-  width : 1px;
-  height : 16px;
-  background : #E0E0E0;
+  div{
+    width : 1px;
+    height : 16px;
+    background : #E0E0E0;
+  }
 }
